# llm-story-generator

./: .gitignore  README.md  data.csv  day_trading.csv  hw2.py  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  tsconfig.json  tsconfig.server.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/manifest/: latest.json
.nuxt/manifest/meta/: dev.json
.nuxt/types/: build.d.ts  imports.d.ts  nitro-imports.d.ts  nitro-routes.d.ts  plugins.d.ts  schema.d.ts
src/: app.py
src/api/: __init__.py  socketio.py
src/api/langchain/: story.py
src/api/story/: story.py
src/api/ws_events/: story.py  test.py
src/llm_story_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: chat_message.py  story_board.py
src/utils/: messages.py
web/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  primevue.config.ts
web/components/Chat/: InputUI.vue  Message.vue
web/components/I/: BlurReveal.vue  Button.vue  Input.vue
web/components/StoryBoard/: index.vue
web/components/StoryBoard/Section/: Extracted.vue  Image.vue  SearchResult.vue  StoryResult.vue
web/composables/: useBackend.ts
web/layouts/: default.vue
web/pages/: index.vue
web/stores/: sessions.ts
web/type/: ChatMessage.type.ts
