[project]
name = "llm-story-generator"
version = "0.1.0"
description = ""
requires-python = "==3.12.4"
dependencies = [
    "fastapi",
    "langchain",
    "langchain-community>=0.3.14",
    "langchain-openai>=0.2.14",
    "nltk>=3.9.1",
    "openai>=1.59.3",
    "pandas>=2.2.3",
    "pydantic",
    "python-socketio>=5.12.1",
    "sentence-transformers>=3.3.1",
    "textblob>=0.18.0.post0",
    "transformers>=4.47.1",
    "uvicorn",
]


[project.optional-dependencies]
dev = ["ruff"]


[tool.ruff]
line-length = 128
indent-width = 4

[tool.ruff.lint]
select = ["ALL", "D201", "D205", "D206", "D207"]
ignore = [
    "D",
    "ANN003",
    "RUF022",
    "RUF002",
    "RUF003",
    "G004",
    "B006",
    "ERA001",
    "FBT001",
    "FBT002",
    "PLR0913",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = "dynamic"
